[package]
name = "interface_performance_test"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }


[[bin]]
name = "concurrency_testing"
path = "src/bin/concurrency_testing.rs"
